packages/admin-ui/src/pages/stakers/components/stakers.scss
:root {
  --eth-multi-client-description-font-size: 0.9rem;
  --eth-multi-client-description-color: var(--light-text-color);
}

.card {
  margin-top: 15px;
}

.staker-buttons {
  display: flex;
  justify-content: space-between;
}

.stakers-dark {
  .consensus-client,
  .execution-client,
  .mev-boost,
  .remote-signer {
    border-bottom: 6px solid rgba(40, 40, 40, 0.75);
    .title {
      color: var(--color-dark-maintext) !important;
    }
    &.isSelected {
      .title {
        color: var(--dappnode-color) !important;
      }
      border-bottom: 6px solid var(--dappnode-color) !important;
    }
    &:hover:not(.isSelected) {
      cursor: pointer;
      background-color: rgb(85, 85, 85);
    }
  }
}

.consensus-client,
.execution-client,
.mev-boost,
.remote-signer {
  width: 100%;
  text-align: center;
  align-items: center;

  // For the underline line that highlights on select
  border-bottom: 6px solid white;
  .title {
    font-weight: bold;
    font-size: 1.25rem;
    transition: color 0.15s;
  }
  /*   .description {
    font-size: var(--eth-multi-client-description-font-size);
    color: var(--eth-multi-client-description-color);
  } */

  > *:not(:last-child) {
    margin-bottom: 1rem;
  }
  // Button feel
  &:hover:not(.isSelected) {
    cursor: pointer;
    border-color: rgb(218, 218, 218);
    background-color: rgb(218, 218, 218);
  }
  &.isSelected {
    border-color: var(--dappnode-color);
    // background-image: linear-gradient(
    //   rgba(255, 0, 0, 0) 0%,
    //   #daedec 50%,
    //   #99d9d4 77%,
    //   #7acac4 87%,
    //   var(--dappnode-color)
    // );
    // background-color: var(--dappnode-color);
    .title {
      color: var(--dappnode-color);
    }
  }
  transition: color 0.15s, background-color 0.15s, border-color 0.15s, box-shadow 0.15s;

  .avatar {
    --avatar-size: 6rem;
    display: flex;
    margin: auto;
    height: var(--avatar-size);
    width: var(--avatar-size);
  }

  @media (max-width: 40rem) {
    .hide-on-small {
      display: none;
    }
  }
}

.smooth-alert-icon {
  font-size: 1.2rem;
  margin-right: 4px;
  color: var(--dappnode-color) !important;
  vertical-align: sub;
}

// Hide network description in mobile view
.network-description {
  @media (max-width: 40rem) {
    display: none;
  }
}

